<?xml version="1.0" encoding="utf-8"?>

<!-- Balise du layout global de la View -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mystery"
    tools:context=".GameActivity">

<!--    Message de bonne chance au joueur -->
    <TextView
        android:id="@+id/tv_game_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_game_goodluck"
        android:textSize="32sp"
        android:textColor="@color/magenta"
        android:background="@color/black"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        />

    <!--    Layout contenant le reste de la View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/magenta"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:padding="10dp">

<!--        Instructions de jeu -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_instructions"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:gravity="center"/>

<!--        Condition de réussite -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_condition"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

<!--        Compte des points -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_condition_score"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

<!--        Tableau d'affichage des tentatives -->
        <TextView
            android:id="@+id/tv_game_attempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_default_attempts"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/green"
            android:layout_marginTop="40dp"
            android:paddingVertical="5dp"/>

<!--        Layout contenant l'input utilisateur et le bouton d'envoie -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">

<!--            Input utilisateur -->
            <EditText
                android:id="@+id/et_game_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@string/et_number"
                android:textColorHint="@color/green"
                android:textSize="24sp"
                android:textColor="@color/green"
                android:backgroundTint="@color/green"/>

<!--            Bouton d'envoie -->
            <Button
                android:id="@+id/btn_game_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_game_send"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/green"/>
        </LinearLayout>

<!--        Indice à l'utilisateur -->
        <TextView
            android:id="@+id/tv_game_wrong"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tv_game_wrong_number"
            android:textSize="36sp"
            android:textColor="@color/red"
            android:background="@color/black"
            android:gravity="center"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</LinearLayout>